05-kubernetes/day14-networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - http:
      paths:
      - path: /shop
        pathType: Prefix
        backend:
          service:
            name: web-svc        # /shop -> web-svc
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: web-svc        # /api  -> (would be a different service)
            port:
              number: 80
